# unid

./: .clang-format  .cmake-format.yaml  .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py  tree.txt
client/: CMakeLists.txt  README.md  main.cpp  main.hpp
client/logger/: CMakeLists.txt
client/network/: udp_client.cpp  udp_client.hpp
client/src/: main.cpp  main.hpp
client/src/consensus/: concensus.cpp
client/src/network/implementations/: README.md
client/src/network/udp/: dgram.hpp  udp.hpp
client/unid/: unid.cpp
common/: CMakeLists.txt  README  README.md
common/include/common/: config.hpp  libpool.h  mempool.hpp  string_constants.hpp  utility.hpp
common/logger_lib/: CMakeLists.txt  README.md  quill_static.cpp  quill_static.hpp
common/network/libpool/: CMakeLists.txt  libpool.h
common/src/: config.cpp  get_xdg_dir.cpp  libpool.c  mempool.cpp  quill.cpp  utility.cpp
doc/: README.md  Untitled Diagram.drawio  ddd.md  directory.md  fdd.md  server_naming_conventions.md  srs.md  unidly-cpp-guidelines.md  urs.md
doc/config/: ddd.md  fdd.md  urs.md
doc/consensus/: fdd.md
doc/data/: ddd.md
doc/doxygen/: README.md
doc/ipc/ipc_queue/: ipc_queue.md
doc/network/: 01_udp.md  02_serialization.md  03_encryption.md  03_quic.md  04_error_detection.md  05_handshake_protocols.md  06_network_failure.md  07_network_recover.md
doc/protocol/: fdd.md  urs.md
docs/: fds.md
lib/: README.md
server/: CMakeLists.txt  README.md  main.cpp  main.hpp  udp_server.hpp
server/logger/: CMakeLists.txt  README.md  quill_logger.cpp  quill_logger.hpp
server/network/: event_emitter.hpp  libpool-test.c  libpool.c  libpool.h  libpool_wrapper.cpp  network.hpp  udp_server.cpp  udp_server.hpp
server/src/: main.cpp
server/src/consensus/: concensus.hpp
server/src/network/: network.cpp  udp_server.cpp  udp_server.hpp  udp_socket.hpp
server/src/network/udp/: udp_in.cpp  udph2net.cpp  udpnet2h.cpp  upalloc.cpp
spike/: README.md  asio_async_udp_client.cpp  asio_async_udp_server.cpp  asio_udp_client  asio_udp_client.cpp  asio_udp_server  asio_udp_server.cpp  callback  callback.cpp  circular_queue.cpp  concatenate_arrays.cpp  crc32  crc32.cpp  get_unid_filepath.cpp  ipc_circular_queue.cpp  ipc_circular_queue.hpp  ipc_ringbuffer  ipc_ringbuffer.cpp  ipc_shared_memory.hpp  ipc_shared_memory_client.cpp  ipc_shared_memory_server.cpp  junk.cpp  performant_callback_class.cpp  quill_class.cpp  shared_memory_server.cpp  simple_callback_class.cpp  spdlog  spdlog.cpp  templated_callback_class  templated_callback_class.cpp  toml_to_timepoint.cpp  udp_callback_class  udp_callback_class.cpp  udp_client  udp_client.cpp  udp_server  udp_server.cpp
spike/asio_async_udp/: client  client.cpp  server  server.cpp
spike/benchmark/: README.md
spike/benchmark/encrypters/: cryptopp.cpp  libsodium.cpp
spike/benchmark/serializers/: capnproto.cpp  cppserial  cppserial.cpp  flatbuffers  flatbuffers.cpp  serialize_uint64_t  serialize_uint64_t.cpp  unid_block.fbs  unid_block_generated.h  unidserial  unidserial.cpp
spike/lfwfc/: README.md
spike/lfwfc/lock-free-wait-free-circularfifo/g2utilities/: g2random.h
spike/lfwfc/lock-free-wait-free-circularfifo/src/: circularfifo_hazard_platform_dependent.hpp  circularfifo_memory_relaxed_aquire_release.hpp  circularfifo_memory_sequential_consistent.hpp
spike/network/: udp_server.cpp
src/network/: udp.cpp  udp.hpp
src/network/udp/: udpcksum.cpp  udpnxtp.cpp  udpsend.cpp
test/: CMakeLists.txt  README.md  client_network_udp_test.cpp  common_config_test.cpp  common_mempool_test.cpp  common_utility_test.cpp  network_udp_client.cpp  network_udp_server.cpp  server_network_udp_test.cpp
